--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,15 @@
               "src/assets"
             ],
             "styles": [
+              "src/style.scss",
+              "node_modules/uikit/dist/css/uikit.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/uikit/dist/js/uikit.min.js",
+              "./node_modules/uikit/dist/js/uikit-icons.min.js"
+            ]
           },
           "configurations": {
             "production": {
